--- a/css/style1.css
+++ b/css/style1.css
@@ -186,27 +186,15 @@ body{
 }
 
 
-@media screen and (max-width: 500px){
+@media screen and (min-width: 500px){
 
-	.header{
-		height: 50vh;
-		font-size: 34px;
-		background: red
-	}
+.header{
+	min-width: 83vh;
+}
 
-	.header__title{
-		padding-top: 8rem;
-	}
-
-	.nav-main__item{
-		font-size: 25px;
-		min-width: 10rem;
-	}
-
-	.cont__text{
-		font-size: 25px;
-		margin-left: auto;
-		margin-right: auto;
-	}
+.nav-main{
+	margin: 0 auto;
+	min-width: 86vh;
+}
 
 }
