--- a/css/style1.css
+++ b/css/style1.css
@@ -10,6 +10,12 @@ body{
 	max-width: 100%;
 } */
 
+/*links en la barra de busqueda*/
+.nav-main__item a {
+	text-decoration: none;
+	color: inherit;
+}
+
 
 .header{
 	background-color: #2e86de;
@@ -68,26 +74,17 @@ body{
 }
 
 .container{
-
 	font-size: 18px;
 
 }
 
-
-.cont__title{
-	text-align: center;
-	font-size: 24px;
+.bold{
 	font-weight: bold;
-	margin: 0 auto;
 }
 
-.cont__text{
-	max-width: 40%;
-	margin: 0 auto;
-}
+/*abouts*/
 
-
-.grid-2{
+.about{
 	display: flex;
 	max-width: 90%;
 	margin-right: auto;
@@ -96,20 +93,41 @@ body{
 	font-size: 20px;
 	border-bottom-style: double;
 	border-bottom-color: #2e86de;
-	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
+}
+.cont__title{
+	text-align: center;
+	font-size: 24px;
+}
+.cont__text{
+	max-width: 40%;
+}
+.rigth{
+	margin-left: auto;
+}
 
+/*abouts*/
+
+/*NOTE Grids templates*/
+.grid-2{
+	display: grid;
+	grid-template-columns: auto auto;
+	margin: 2em 0
 }
 
 .grid-3{
-	display: flex;
+	display: grid;
+	grid-template-columns: auto auto auto;
+	margin: 2em 0
+	/*display: flex;
 	height: 15rem;
 	font-size: 18px;
 	padding-top: 6rem;
 	padding-bottom: 6rem;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-around;*/
 }
+/*NOTE Grids templates*/
 
 .bg-fff{
 	background: #fff;
@@ -121,6 +139,7 @@ body{
 	background-color: #2e86de;
 	height: 5em;
 	justify-content: center;
+	width: 100%
 
 }
 
@@ -186,15 +205,49 @@ body{
 }
 
 
-@media screen and (min-width: 500px){
-
+@media screen and (max-width: 660px){
 .header{
 	min-width: 83vh;
+}
+
+.container{
+	min-width: 120%;
+	max-width: 120%;
+}
+
+.footer{
+	max-width: 120%;
+	min-width: 120%
 }
 
 .nav-main{
 	margin: 0 auto;
 	min-width: 86vh;
 }
+/*responsive botones de nav*/
+.nav-main__item{
+	min-width: 5em;
+	font: 13px
+}
 
+/*responsive cards*/
+.grid-3{
+	grid-template-columns: auto;
+	grid-template-rows: auto auto auto;
+	grid-row-gap: 1em
+}
+.grid-2{
+	grid-template-columns: auto;
+	grid-template-rows: auto auto;
+	grid-row-gap: 1em
+}
+}
+
+@media screen and (max-width: 340px){
+	.container{
+		width: 500px
+	}
+	.footer{
+		width: 500px
+	}
 }
